@@ -2,6 +2,7 @@ package datawave.mr.bulk;
 
 import java.io.Closeable;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.ByteBuffer;
 import java.util.Collection;
 import java.util.Collections;
@@ -32,6 +33,7 @@ import org.apache.accumulo.core.crypto.CryptoFactoryLoader;
 import org.apache.accumulo.core.data.ByteSequence;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Range;
+import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.file.FileOperations;
 import org.apache.accumulo.core.file.FileSKVIterator;
@@ -175,6 +177,11 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
         }
 
         @Override
+        public SortedKeyValueIterator<Key,Value> reserveMapFileReader(String s) throws IOException {
+            return null;
+        }
+
+        @Override
         public AccumuloConfiguration getConfig() {
             return conf;
         }
@@ -187,6 +194,11 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
         @Override
         public boolean isFullMajorCompaction() {
             throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public void registerSideChannel(SortedKeyValueIterator<Key,Value> sortedKeyValueIterator) {
+
         }
 
         @Override
@@ -221,6 +233,11 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
 
         @Override
         public PluginEnvironment getPluginEnv() {
+            return null;
+        }
+
+        @Override
+        public TableId getTableId() {
             return null;
         }
     }
@@ -369,7 +386,7 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
         try {
             globalIter = applyTableIterators(topIter, conf);
             globalIter = buildTopIterators(globalIter, conf);
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
             throw new IOException(e);
         }
 
@@ -404,7 +421,12 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
             SortedKeyValueIterator<Key,Value> visFilter = VisibilityFilter.wrap(topIter, auths, defaultSecurityLabel);
             IteratorBuilder.IteratorBuilderEnv iterLoad = IteratorConfigUtil.loadIterConf(IteratorScope.scan, Collections.emptyList(), Collections.emptyMap(),
                             acuTableConf);
-            return IteratorConfigUtil.loadIterators(visFilter, iterLoad.env(iterEnv).build());
+            try {
+                return IteratorConfigUtil.loadIterators(visFilter, iterLoad.env(iterEnv).build());
+            } catch (Exception e) {
+                log.error(e.getMessage(), e);
+                throw new IOException(e);
+            }
         }
 
         return topIter;
@@ -425,8 +447,8 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
      * @throws IOException
      *             for read/write issues
      */
-    protected SortedKeyValueIterator<Key,Value> buildTopIterators(SortedKeyValueIterator<Key,Value> topIter, Configuration conf)
-                    throws ClassNotFoundException, InstantiationException, IllegalAccessException, IOException {
+    protected SortedKeyValueIterator<Key,Value> buildTopIterators(SortedKeyValueIterator<Key,Value> topIter, Configuration conf) throws ClassNotFoundException,
+                    InstantiationException, IllegalAccessException, IOException, InvocationTargetException, NoSuchMethodException {
 
         List<AccumuloIterator> iterators = BulkInputFormat.getIterators(conf);
         List<AccumuloIteratorOption> options = BulkInputFormat.getIteratorOptions(conf);
@@ -458,7 +480,7 @@ public class RecordIterator extends RangeSplit implements SortedKeyValueIterator
 
             Class<? extends SortedKeyValueIterator> iter = Class.forName(settings.getIteratorClass()).asSubclass(SortedKeyValueIterator.class);
 
-            SortedKeyValueIterator<Key,Value> newInstance = iter.newInstance();
+            SortedKeyValueIterator<Key,Value> newInstance = iter.getDeclaredConstructor().newInstance();
 
             newInstance.init(newIter, settings.getOptions(), myData);
 
